basic-config/etc/iptables/iptables.rules
#File is generated by gluon-server-scripts
*filter
:INPUT ACCEPT [11844:1916189]
:FORWARD ACCEPT [0:0]
-A FORWARD -o tun-vpn-01 -p tcp --dport 25  -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -o tun-vpn-01 -p tcp --dport 23 -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -o tun-vpn-01 --dst 192.168.0.0/16 -j REJECT --reject-with icmp-admin-prohibited
-A FORWARD -o tun-vpn-01 -p udp --dport 16471 -j LOG --log-prefix "FORWARD:LOG:might be a botnet!" --log-level 6
-A FORWARD -m state --state INVALID -m comment --comment "DROP INVALID" -j DROP
:OUTPUT ACCEPT [6263:1020836]
COMMIT
*mangle
:PREROUTING ACCEPT [174173:29763433]
-A PREROUTING -p tcp ! -d 62.141.34.112 -m multiport --dports 80,8080,443,1337 --jump MARK --set-mark 41
-A PREROUTING -m mac --mac-source 00:1f:3b:a9:00:ad -j DROP
:INPUT ACCEPT [173743:29726484]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [95448:18280029]
-A OUTPUT -p udp -m mark --mark 0x42 -j TOS --set-tos 2
:POSTROUTING ACCEPT [95459:18280541]
COMMIT
*nat
:PREROUTING ACCEPT [516:46790]
:INPUT ACCEPT [80:9421]
:OUTPUT ACCEPT [48:3433]
:POSTROUTING ACCEPT [47:3349]
-A POSTROUTING -o tun-vpn-01 -j MASQUERADE
COMMIT
